@startuml
' ==========================================================
' Diagramme de classes participantes — Cas d’utilisation : Investir dans un projet
' Objectif : classes impliquées dans la création d’investissement + confirmation webhook
' Alignement : `backend/routes/api/investmentRoutes.js`, `backend/routes/api/webhookRoutes.js`,
'             `backend/services/investmentService.js`, `backend/services/payoutService.js`
' ==========================================================

title Diagramme de classes participantes — UC "Investir"
left to right direction
skinparam dpi 160
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam wrapWidth 240

class InvestmentRoutes <<controller>> {
  +POST /api/investments()
  +POST /api/investments/:id/cancel()
  +POST /api/investments/:id/retry()
  +POST /api/investments/mock/confirm()
}

class WebhookRoutes <<controller>> {
  +POST /api/webhooks/mock-payments()
}

class InvestmentService <<service>> {
  +createInvestment({ investorId, projectId, amount })
  +handleMockWebhook(req)
  +confirmMockPaymentFromClient(données)
  +cancelInvestment({ investorId, investmentId })
  +retryInvestmentPayment({ investorId, investmentId })
}

class Investment <<model>> {
  +investorId
  +projectId
  +amount
  +status
  +paymentAttempts
}

class Project <<model>> {
  +currentFunding
  +fundingGoal
  +status
}

class FailedRefundEvent <<model>> {
  +projectId
  +investmentId
  +error
  +reason
  +retryCount
  +resolved
  +resolvedBy
  +resolvedAt
}

InvestmentRoutes ..> InvestmentService
WebhookRoutes ..> InvestmentService
InvestmentService ..> Investment
InvestmentService ..> Project
InvestmentService ..> FailedRefundEvent : (si échec remboursement)

note bottom of Investment
  La confirmation de paiement est idempotente\n
  (évite double crédit si webhook rejoué).
end note

@enduml

